add gulp and render HTML structure

--- a/src/layouts/application.handlebars
+++ b/src/layouts/application.handlebars
@@ -11,6 +11,8 @@
 <body>
 	{{> yield }}
 
-	{{{democritusData}}}
+	<!-- ENGINE CODE -->
+	{{{engineData}}}
+	<!-- END ENGINE CODE -->
 </body>
 </html>
