skip files starting with _ and improve patterns list

--- a/src/layouts/application.handlebars
+++ b/src/layouts/application.handlebars
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>{{#if pageTitle}}{{pageTitle}}{{else}}Page Title{{/if}}</title>
-
+	<link rel="stylesheet" href="/styleguide/css/style.css">
 	{{#if html }}
 	<!-- HTML IS TRUE -->
 	{{/if}}
