add watch to navigation module and css from patterns

--- a/core/modules/navigation/template/index.html
+++ b/core/modules/navigation/template/index.html
@@ -1,4 +1,4 @@
-<div class="democritus-info-bar active">
+<div class="democritus-info-bar">
 	<div class="democritus-info-bar--close">
 		<a href="javascript:;" class="democritus-info-bar--close__link">X</a>
 	</div>
