--- a/core/modules/navigation/template/index.html
+++ b/core/modules/navigation/template/index.html
@@ -1,8 +1,33 @@
-<div class="democritus-info-bar active">
-	<div class="democritus-info-bar--close">
-		<a href="javascript:;" class="democritus-info-bar--close__link">X</a>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+
+<div class="democritus-sticky-nav">
+  <a href="javascript:;" class="democritus-start-button fa fa-expand"><span>Democritus Options</span></a>
+  <div class="democritus-navigation">
+    <a href="javascript:;" class="democritus-navigation--menu fa fa-bars">
+      <span>Menu</span>
+    </a>
+    <a href="javascript:;" class="democritus-navigation--code fa fa-code">
+      <span>Code</span>
+    </a>
+    <a href="javascript:;" class="fa fa-question">
+      <span>Documentation</span>
+    </a>
+    <a href="javascript:;" class="democritus-navigation--search fa fa-search">
+      <span>Search</span>
+    </a>
+  </div>
+  <div class="democritus-search-wrapper">
+    <div class="democritus-search">
+      <input type="search">
+    </div>
+  </div>
+</div>
+
+<div class="democritus-code-frame">
+	<div class="democritus-code-frame--close">
+		<a href="javascript:;" class="democritus-code-frame--close__link">X</a>
 	</div>
-	<div class="democritus-info-bar--patterns">
+	<div class="democritus-code-frame--patterns">
 		<p>Dependencies: <span id="democritus-dependencies-list"></span></p>
 	</div>
 
