--- a/core/modules/navigation/template/index.html
+++ b/core/modules/navigation/template/index.html
@@ -25,7 +25,9 @@
 
 <div class="democritus-code-frame">
 	<div class="democritus-code-frame--close">
-		<a href="javascript:;" class="democritus-code-frame--close__link">X</a>
+		<a href="javascript:;" class="democritus-code-frame--close__link fa fa-close">
+			<span>Close</span>
+		</a>
 	</div>
 	<div class="democritus-code-frame--patterns">
 		<p>Dependencies: <span id="democritus-dependencies-list"></span></p>
