Add documentation handler

--- a/core/modules/navigation/template/index.html
+++ b/core/modules/navigation/template/index.html
@@ -1,4 +1,4 @@
-<div class="democritus-info-bar">
+<div class="democritus-info-bar active">
 	<div class="democritus-info-bar--close">
 		<a href="javascript:;" class="democritus-info-bar--close__link">X</a>
 	</div>
@@ -10,6 +10,7 @@
 		<ul class="democritus-code--nav">
 			<li class="democritus-code--item"><a href="#html">HTML</a></li>
 			<li class="democritus-code--item"><a href="#handlebars">Handlebars</a></li>
+			<li class="democritus-code--item"><a href="#documentation">Documentation</a></li>
 		</ul>
 	</div>
 </div>
