--- a/core/modules/navigation/scss/navigation.scss
+++ b/core/modules/navigation/scss/navigation.scss
@@ -72,12 +72,15 @@ $tab-active: #272822;
 			float: left;
 			background-color: $tab;
 			margin-left: 2px;
-			border-top-right-radius: 4px;
 
 			&:first-child {
 				border-top-right-radius: 0;
 				border-top-left-radius: 4px;
 				margin-left: 0;
+			}
+
+			&:last-child {
+				border-top-right-radius: 4px;
 			}
 
 			&.active {
@@ -106,6 +109,20 @@ $tab-active: #272822;
 			li {
 				overflow: auto;
 			}
+		}
+
+		&--documentation {
+			padding: 1em;
+			background-color: #272822;
+			color: #f8f8f2;
+			border-radius: 0.3em;
+			border-top-left-radius: 0;
+			font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+			text-align: left;
+			word-spacing: normal;
+			word-break: normal;
+			word-wrap: normal;
+			line-height: 1.5;
 		}
 	}
 }
