--- a/core/modules/templates/footer.html
+++ b/core/modules/templates/footer.html
@@ -1,11 +1,11 @@
 <script>
-	window.democritus = {
-		i: {},
-		core: {}
+	window.neutronADT = {
+		i: {
+			dependencies: #{dependencies},
+			patternName: "#{patternName}"
+		}
 	};
-	democritus.i.dependencies = #{dependencies};
-	democritus.i.patternName = "#{patternName}";
 </script>
 <script src="/styleguide/modules/navigation/js/scripts.js"></script>
 
-<aside id="democritus"></aside>
+<aside id="neutron"></aside>
