--- a/core/modules/templates/index.handlebars
+++ b/core/modules/templates/index.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Democritus</title>
+	<title>Neutron Atomic Design Tool</title>
 
 	<!-- ENGINE CODE -->
 	{{{engineHeader}}}
@@ -11,7 +11,7 @@
 <body>
 
 	<section>
-		<h1>Welcome to Democritus!</h1>
+		<h1>Welcome to Neutron Atomic Design Tool!</h1>
 
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
