--- a/core/modules/navigation/template/index.html
+++ b/core/modules/navigation/template/index.html
@@ -1,43 +1,43 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 
-<div class="democritus-sticky-nav">
-  <a href="javascript:;" class="democritus-start-button fa fa-expand"><span>Democritus Options</span></a>
-  <div class="democritus-navigation">
-    <a href="javascript:;" class="democritus-navigation--menu fa fa-bars">
+<div class="neutron-sticky-nav">
+  <a href="javascript:;" class="neutron-start-button fa fa-expand"><span>Neutron Options</span></a>
+  <div class="neutron-navigation">
+    <a href="javascript:;" class="neutron-navigation--menu fa fa-bars">
       <span>Menu</span>
     </a>
-    <a href="javascript:;" class="democritus-navigation--code fa fa-code">
+    <a href="javascript:;" class="neutron-navigation--code fa fa-code">
       <span>Code</span>
     </a>
     <a href="javascript:;" class="fa fa-qrcode">
       <span>QR Code</span>
     </a>
-    <a href="javascript:;" class="democritus-navigation--search fa fa-search">
+    <a href="javascript:;" class="neutron-navigation--search fa fa-search">
       <span>Search</span>
     </a>
   </div>
-  <div class="democritus-search-wrapper">
-    <div class="democritus-search">
+  <div class="neutron-search-wrapper">
+    <div class="neutron-search">
       <input type="search">
     </div>
   </div>
 </div>
 
-<div class="democritus-code-frame">
-	<div class="democritus-code-frame--close">
-		<a href="javascript:;" class="democritus-code-frame--close__link fa fa-close">
+<div class="neutron-code-frame">
+	<div class="neutron-code-frame--close">
+		<a href="javascript:;" class="neutron-code-frame--close__link fa fa-close">
 			<span>Close</span>
 		</a>
 	</div>
-	<div class="democritus-code-frame--patterns">
-		<p>Dependencies: <span id="democritus-dependencies-list"></span></p>
+	<div class="neutron-code-frame--patterns">
+		<p>Dependencies: <span id="neutron-dependencies-list"></span></p>
 	</div>
 
-	<div class="democritus-code">
-		<ul class="democritus-code--nav">
-			<li class="democritus-code--item"><a href="#html">HTML</a></li>
-			<li class="democritus-code--item"><a href="#handlebars">Handlebars</a></li>
-			<li class="democritus-code--item"><a href="#documentation">Documentation</a></li>
+	<div class="neutron-code">
+		<ul class="neutron-code--nav">
+			<li class="neutron-code--item"><a href="#html">HTML</a></li>
+			<li class="neutron-code--item"><a href="#handlebars">Handlebars</a></li>
+			<li class="neutron-code--item"><a href="#documentation">Documentation</a></li>
 		</ul>
 	</div>
 </div>
