add keyboard navigation

--- a/core/modules/navigation/template/index.html
+++ b/core/modules/navigation/template/index.html
@@ -9,7 +9,7 @@
     <a href="javascript:;" class="neutron-navigation--code fa fa-code">
       <span>Code</span>
     </a>
-    <a href="javascript:;" class="fa fa-qrcode">
+    <a href="javascript:;" class="neutron-navigation--qr fa fa-qrcode">
       <span>QR Code</span>
     </a>
     <a href="javascript:;" class="neutron-navigation--search fa fa-search">
