--- a/core/modules/navigation/template/index.html
+++ b/core/modules/navigation/template/index.html
@@ -11,16 +11,14 @@
     </a>
     <a href="javascript:;" class="neutron-navigation--qr fa fa-qrcode">
       <span>QR Code</span>
-    </a>
-    <a href="javascript:;" class="neutron-navigation--search fa fa-search">
-      <span>Search</span>
-    </a>
+    </a>    
   </div>
+    
   <div class="neutron-search-wrapper">
     <div class="neutron-search">
-      <input type="search">
+      <input class="neutron-search__input" type="search" placeholder="Search patterns">
     </div>
-  </div>
+  </div>  
 </div>
 
 <div class="neutron-code-frame">
