add handlebars helpers to the project

--- a/src/patterns/pages/blog.handlebars
+++ b/src/patterns/pages/blog.handlebars
@@ -2,6 +2,7 @@
 	{{> organisms/global/header }}
 	<div role="main">
 		<h1 class="section-title">Our Outdoor Blog</h1>
+		{{# index }}{{/index}}
 		<div class="l-two-col">
 			<div class="l-main">
 				<section class="section latest-posts">
