add helpers#contentFor and #outputFor

--- a/src/patterns/organisms/global/footer.handlebars
+++ b/src/patterns/organisms/global/footer.handlebars
@@ -4,4 +4,6 @@
 		<p class="copyright">&copy; 2015 Company Name. All rights reserved.</p>
 	</div>
 </footer>
+
+{{outputFor "scripts"}}
 <!-- End Footer -->
