--- a/src/patterns/pages/blog.handlebars
+++ b/src/patterns/pages/blog.handlebars
@@ -2,7 +2,12 @@
 	{{> organisms/global/header }}
 	<div role="main">
 		<h1 class="section-title">Our Outdoor Blog</h1>
-		{{# index }}{{/index}}
+		{{ testHelper }}
+
+		{{# contentFor "scripts" }}
+			<h1>this content will be outputted in another place</h1>
+		{{/ contentFor }}
+
 		<div class="l-two-col">
 			<div class="l-main">
 				<section class="section latest-posts">
