generate source maps and add minified file only

--- a/core/modules/templates/footer.html
+++ b/core/modules/templates/footer.html
@@ -6,6 +6,6 @@
 		}
 	};
 </script>
-<script src="/styleguide/modules/navigation/js/scripts.js"></script>
+<script src="/styleguide/modules/navigation/js/scripts.min.js"></script>
 
 <aside id="neutron"></aside>
