improve dialog functionality and change code frame close button

--- a/core/modules/navigation/template/index.html
+++ b/core/modules/navigation/template/index.html
@@ -42,8 +42,9 @@
 
 <div class="neutron-code-frame">
 	<div class="neutron-code-frame--close">
-		<a href="javascript:;" class="neutron-code-frame--close__link fa fa-close">
+		<a href="javascript:;" class="neutron-button--close__link">
 			<span>Close</span>
+			<svg width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1490 1322q0 40-28 68l-136 136q-28 28-68 28t-68-28l-294-294-294 294q-28 28-68 28t-68-28l-136-136q-28-28-28-68t28-68l294-294-294-294q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 294 294-294q28-28 68-28t68 28l136 136q28 28 28 68t-28 68l-294 294 294 294q28 28 28 68z"/></svg>
 		</a>
 	</div>
 	<div class="neutron-code-frame--patterns">
@@ -59,8 +60,12 @@
 	</div>
 </div>
 
-<div class="neutron-qr-code-wrapper">
-	<div class="neutron-qr-code-frame">
+<div class="neutron-lightbox neutron-qr-code-wrapper">
+	<div class="neutron-lightbox--content neutron-qr-code-frame">
+		<a href="javascript:;" class="neutron-button--close__link">
+			<span>Close</span>
+			<svg width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1490 1322q0 40-28 68l-136 136q-28 28-68 28t-68-28l-294-294-294 294q-28 28-68 28t-68-28l-136-136q-28-28-28-68t28-68l294-294-294-294q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 294 294-294q28-28 68-28t68 28l136 136q28 28 28 68t-28 68l-294 294 294 294q28 28 28 68z"/></svg>
+		</a>
 		<h1 class="neutron-qr-code-frame--headline">Export URL</h1>
 		<p class="neutron-qr-code-frame--text">Exprting the following URL as QR Code: <span>http://localhost:8080/patterns/templates-homepage/index.html</span></p>
 		<div id="qrcode"></div>
