--- a/core/modules/navigation/scss/navigation.scss
+++ b/core/modules/navigation/scss/navigation.scss
@@ -13,6 +13,19 @@ $buttonSize: 33px;
 $gap: 2px;
 $menuWidth: 173px;
 
+##{$prefix} {
+	z-index: 9999999;
+}
+
+.#{$prefix}-sticky-nav {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 0px;
+	z-index: 1;
+}
+
 .#{$prefix}-code-frame,
 .#{$prefix}-menu {
 	* {
@@ -51,6 +64,7 @@ $menuWidth: 173px;
 	bottom: 0;
 	left: (($buttonSize*3) + ($gap*3)) * -1;
 	z-index: 1;
+	width: ($buttonSize*3) + ($gap*2);
 
 	&.active {
 		left: $buttonSize + $gap;
@@ -66,7 +80,7 @@ $menuWidth: 173px;
 		margin-left: 2px;
 		text-decoration: none !important;
 		color: white;
-		
+
 		svg path {
 			fill: white;
 		}
@@ -209,26 +223,13 @@ $menuWidth: 173px;
 	overflow-x: hidden;
 	overflow-y: auto;
 	padding: 20px;
-	z-index: 100;
+	z-index: 1;
 	color: $txtcolor;
 	@include prefix(transition, bottom 0.5s ease-out);
 	@include prefix(box-sizing, border-box);
 
 	&.active {
 		bottom: 0;
-	}
-
-	&--close {
-		text-align: right;
-		position: fixed;
-		right: $buttonSize;
-
-		&__link {
-			color: $txtcolor;
-			&:hover {
-				color: $txtcolor;
-			}
-		}
 	}
 
 	&--patterns {
@@ -311,18 +312,52 @@ $menuWidth: 173px;
 	}
 }
 
-.#{$prefix}-qr-code-wrapper {
+.#{$prefix}-lightbox {
 	z-index: 999999;
 
+	&--content {
+		position: fixed;
+		top: -999px;
+		left: 50%;
+		width: 600px;
+		height: auto;
+		margin: -150px 0 0 -300px;
+		background-color: $bgcolor;
+		padding: 10px;
+		@include prefix(transition, top 1s ease-out);
+		z-index: 4;
+		@include prefix(box-sizing, border-box);
+		color: white;
+
+		&--headline,
+		&--text {
+			color: white;
+			font-family: Arial, sans-serif;
+		}
+
+		&--headline {
+			font-size: 24px;
+			line-height: 1;
+			margin-bottom: 12px;
+		}
+
+		&--text {
+			font-size: 16px;
+			line-height: 1;
+			margin-bottom: 8px;
+		}
+
+	}
+
 	&:after {
-		position: absolute;
+		position: fixed;
 		top: -999px;
 		left: 0;
 		display: block;
 		content: " ";
 		width: 0;
 		height: 0;
-		background-color: rgba(0, 0, 0, 0.5);
+		background-color: rgba(0, 0, 0, 0.8);
 		z-index: 3;
 		@include prefix(transition, opacity 1s ease-out);
 		opacity: 0;
@@ -336,26 +371,18 @@ $menuWidth: 173px;
 			opacity: 1;
 		}
 
-		.#{$prefix}-qr-code-frame {
-			top: 50%;
+		.#{$prefix}-lightbox--content {
+			top: 40%;
+			@media (max-width: 600px) {
+				left: 0;
+				margin-left: 0;
+				width: 100%;
+			}
 		}
 	}
 }
 
 .#{$prefix}-qr-code-frame {
-	position: fixed;
-	top: -999px;
-	left: 50%;
-	width: 600px;
-	height: auto;
-	margin: -150px 0 0 -300px;
-	background-color: $bgcolor;
-	padding: 10px;
-	@include prefix(transition, top 1s ease-out);
-	z-index: 4;
-	@include prefix(box-sizing, border-box);
-	color: white;
-
 	#qrcode {
 		background-color: white;
 		padding: 5px;
@@ -368,36 +395,26 @@ $menuWidth: 173px;
 			margin: 0 auto;
 		}
 	}
+}
 
-	&.#{$prefix}-frame-active {
-		bottom: calc(50% + 37px);
+.#{$prefix}-button--close__link {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: $buttonSize;
+	height: $buttonSize;
+	background-color: white;
+	color: $bgcolor;
+
+	span {
+		display: none;
 	}
 
-	&--headline,
-	&--text {
-		color: white;
-		font-family: Arial, sans-serif;
-	}
-
-	&--headline {
-		font-size: 24px;
-		line-height: 1;
-		margin-bottom: 12px;
-	}
-
-	&--text {
-		font-size: 16px;
-		line-height: 1;
-		margin-bottom: 8px;
-	}
-
-	@media (max-width: 600px) {
-		left: 0;
+	svg {
 		width: 100%;
-
-		&.active {
-			left: 0;
-			margin-left: 0;
+		height: 100%;
+		path {
+			fill: $bgcolor;
 		}
 	}
 }
