--- a/core/modules/templates/footer.html
+++ b/core/modules/templates/footer.html
@@ -1,11 +1,12 @@
 <script>
 	window.neutronADT = {
 		i: {
-			dependencies: #{dependencies},
-			patternName: "#{patternName}"
+			dependencies: {{{dependencies}}},
+			patternName: "{{patternName}}",
+			assetsPath: "{{assetsPath}}"
 		}
 	};
 </script>
-<script src="/styleguide/modules/navigation/js/scripts.min.js"></script>
+<script src="{{assetsPath}}styleguide/modules/navigation/js/scripts.min.js"></script>
 
 <aside id="neutron"></aside>
