--- a/core/modules/templates/header.html
+++ b/core/modules/templates/header.html
@@ -1,2 +1,2 @@
-<link rel="stylesheet" href="/styleguide/modules/navigation/css/navigation.css">
-<link rel="stylesheet" href="/css/styles.css">
+<link rel="stylesheet" href="{{assetsPath}}styleguide/modules/navigation/css/navigation.css">
+<link rel="stylesheet" href="{{assetsPath}}css/styles.css">
