--- a/core/modules/templates/index.handlebars
+++ b/core/modules/templates/index.handlebars
@@ -5,7 +5,7 @@
 	<title>Neutron Atomic Design Tool</title>
 
 	<!-- ENGINE CODE -->
-	{{{engineHeader}}}
+	{{> engineHeader}}
 	<!-- END ENGINE CODE -->
 </head>
 <body>
@@ -24,7 +24,7 @@
 	</section>
 
 	<!-- ENGINE CODE -->
-	{{{engineFooter}}}
+	{{> engineFooter}}
 	<!-- END ENGINE CODE -->
 </body>
 </html>
