--- a/core/modules/navigation/scss/navigation.scss
+++ b/core/modules/navigation/scss/navigation.scss
@@ -157,29 +157,39 @@ $menuWidth: 173px;
 .#{$prefix}-menu--items {
 	list-style: none;
 	margin: 0;
-	padding: 0;
+	padding-top: 10px;
 	overflow: auto;
 	height: 100%;
 
-	[data-item] > a {
+	[data-item] > label {
 		color: #CCC;
 		text-transform: uppercase;
 	}
 
-	ul {
+	input[type=checkbox] {
 		display: none;
-		&.active {
+		width: 0;
+		height: 0;
+
+		&:checked ~ ul {
 			display: block;
 		}
 	}
 
+	ul {
+		display: none;
+	}
+
 	li {
-		padding-left: 5px;
+		padding-left: 10px;
+
+		label {
+			cursor: pointer;
+		}
 
 		a {
 			font-family: Arial, sans-serif;
-			display: block;
-			padding: 5px;
+			display: block;			
 			color: orange;
 		}
 	}
