--- a/core/modules/navigation/scss/navigation.scss
+++ b/core/modules/navigation/scss/navigation.scss
@@ -15,6 +15,20 @@ $menuWidth: 173px;
 
 ##{$prefix} {
 	z-index: 9999999;
+
+	* {
+		font-size: 16px;
+	}
+
+	pre {
+		border: none;
+	}
+
+	ul {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+	}
 }
 
 .#{$prefix}-sticky-nav {
@@ -155,7 +169,6 @@ $menuWidth: 173px;
 }
 
 .#{$prefix}-menu--items {
-	list-style: none;
 	margin: 0;
 	padding: 0;
 	overflow: auto;
@@ -246,7 +259,6 @@ $menuWidth: 173px;
 	.#{$prefix}-code {
 		&--nav {
 			@include clearfix;
-			list-style: none;
 			margin: 0;
 			padding: 0;
 
@@ -287,7 +299,6 @@ $menuWidth: 173px;
 		}
 
 		&--list {
-			list-style: none;
 			padding: 0;
 			margin: 0;
 
