fix code frame issues

--- a/core/modules/navigation/scss/navigation.scss
+++ b/core/modules/navigation/scss/navigation.scss
@@ -304,6 +304,11 @@ $menuWidth: 173px;
 
 			li {
 				overflow: auto;
+
+				a {
+					color: white;
+					text-decoration: underline;
+				}
 			}
 		}
 
