new patterns and improvements

--- a/src/patterns/atoms/forms/input.hbs
+++ b/src/patterns/atoms/forms/input.hbs
@@ -1,1 +1,7 @@
+{{!!
+  Form input field.
+
+  * **type** (String)
+  _Supported values:_ Check the documentation [here](http://www.w3schools.com/tags/tag_input.asp)
+}}
 <input type="{{type}}" {{#if styleModifier}}class="{{styleModifier}}"{{/if}} {{#if placeholder}}placeholder="{{placeholder}}"{{/if}} value="">
