--- a/src/patterns/molecules/blocks/media.hbs
+++ b/src/patterns/molecules/blocks/media.hbs
@@ -1,10 +1,10 @@
 <div class="media">
 	<div class="media-left">
 		{{#if url}}<a href="{{url}}">
-			{{ render "atoms/media/image" img=img }}
+			{{ render "atoms/media/image" }}
 		</a>
 		{{else}}
-			{{ render "atoms/media/image" img=img }}
+			{{ render "atoms/media/image" }}
 		{{/if}}
 	</div>
 	<div class="media-body">
