--- a/src/patterns/molecules/blocks/thumbnail.hbs
+++ b/src/patterns/molecules/blocks/thumbnail.hbs
@@ -1,11 +1,13 @@
 <div class="col-sm-4 col-xs-12">
 	<div class="thumbnail">
-		{{ render "atoms/media/image" img=img }}
+		{{ render "atoms/media/image" }}
 		<div class="caption">
-			<h3>{{headline}}</h3>
+			{{#with headline}}
+			{{ render "atoms/text/headline" level=3 }}
+			{{/with}}
 			<p>{{text}}</p>
 			<p>
-				{{ render "atoms/text/link" text="See more" url="#" styleModifier="btn btn-default" }}
+				{{ render "atoms/text/link:btn btn-default" text="See more" url="#" }}
 			</p>
 		</div>
 	</div>
