--- a/src/patterns/molecules/forms/search-bar.hbs
+++ b/src/patterns/molecules/forms/search-bar.hbs
@@ -1,7 +1,7 @@
 <form class="navbar-form navbar-left" role="search">
 	<div class="form-group">
-		{{ render "atoms/forms/input" type="text" styleModifier="form-control" placeholder="Search" }}
+		{{ render "atoms/forms/input:form-control" type="text" placeholder="Search" }}
 	</div>
 
-	{{ render "atoms/forms/button" type="submit" styleModifier="btn-default" text="Submit"}}
+	{{ render "atoms/forms/button:btn-default" type="submit" text="Submit"}}
 </form>
