--- a/src/patterns/organisms/highlights/jumbotron.hbs
+++ b/src/patterns/organisms/highlights/jumbotron.hbs
@@ -1,8 +1,12 @@
 <div class="jumbotron">
-	{{ render "atoms/text/headline" level=1 text="Hello Neutron!"}}
+	{{#with headline}}
+	{{ render "atoms/text/headline" }}
+	{{/with}}
 
-	{{ render "atoms/text/paragraph" text="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum at nam impedit saepe fugiat dolore nemo quibusdam ipsam, exercitationem magni nostrum dolorum animi dolores corporis quod, architecto consequatur mollitia minus." }}
+	{{#with intro}}
+	{{ render "atoms/text/paragraph" }}
+	{{/with}}
 	<p>
-		{{ render "atoms/text/link" styleModifier="btn btn-primary btn-lg" url="#" text="Learn more"}}
+		{{ render "atoms/text/link:btn btn-primary btn-lg" url="#" text="Learn more"}}
 	</p>
 </div>
